css/main.css
/* ... */
			#header .container > :last-child {
				margin-bottom: 0;
			}

			#header .container .button {
				min-width: 12em;
			}

/* Footer */

	#footer {
		min-height: 100vh;
		padding: 0 0 12em 0;
		position: relative;
		text-align: center;
	}

		#footer .container {
			padding: 5em 2.5em 3em 2.5em ;
			background: rgba(255, 255, 255, 0.95);
			box-shadow: inset 0 1px 0 0 #dddddd;
		}

		#footer footer {
			bottom: 2em;
			color: rgba(255, 255, 255, 0.5);
			left: 0;
			position: absolute;
			text-align: center;
			width: 100%;
		}

			#footer footer h1, #footer footer h2, #footer footer h3, #footer footer h4, #footer footer h5, #footer footer h6, #footer footer strong, #footer footer b {
				color: #ffffff;
			}

			#footer footer a {
				color: inherit;
			}

				#footer footer a:hover {
					color: #ffffff !important;
				}

			#footer footer .copyright {
				font-size: 0.8em;
				line-height: 1em;
				padding: 0;
			}

				#footer footer .copyright li {
					border-left: solid 1px rgba(255, 255, 255, 0.2);
					display: inline-block;
					margin: 0 0 0 1em;
					padding: 0 0 0 1em;
				}

					#footer footer .copyright li:first-child {
						border-left: 0;
						margin-left: 0;
						padding-left: 0;
					}

/* Large */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 12pt;
			}

	}

/* Medium */

	@media screen and (max-width: 980px) {

		/* Main BG */

			.main-bg {
				display: none;
			}

		/* Main */

			.main .image.primary {
				display: block;
				margin: 0 0 4em 0;
			}

			.main .container {
				padding: 3em 3em 8em 3em ;
			}

				.main .container:before {
					display: none;
				}

		/* Header */

			#header header {
				padding-bottom: 9em;
				width: 80%;
			}

			#header .container {
				margin-left: -40%;
				padding: 3em;
			}

		/* Footer */

			#footer {
				min-height: 0;
				padding: 0;
			}

				#footer .container {
					padding: 3em 3em 1em 3em ;
				}

				#footer footer {
					padding: 3em 3em 1em 3em ;
					bottom: auto;
					position: relative;
				}

	}

/* Small */

	@media screen and (max-width: 736px) {

		/* Basic */

			h2 {
				font-size: 1.35em;
			}

		/* Main */

			.main .container {
				padding: 3em 1.5em 1em 1.5em ;
			}

				.main .container .image.primary:first-child {
					margin: -1.5em 0 2.5em 0;
				}

			.main .goto-next {
				display: none;
			}

		/* Header */

			#header {
				height: 80vh;
			}

				#header:after {
					height: 80vh;
				}

				#header header {
					padding-bottom: 0;
				}

					#header header h1 {
						font-size: 2em;
					}

					#header header p {
						margin-top: 1em;
					}

				#header .container {
					display: none;
				}

		/* Footer */

			#footer .container {
				padding: 3em 1.5em 1em 1.5em ;
			}

	}

/* XSmall */

	@media screen and (max-width: 480px) {

		/* Basic */

			html, body {
				min-width: 320px;
			}

		/* List */

			ul.actions {
				margin: 0 0 2em 0;
			}

				ul.actions li {
					display: block;
					padding: 1em 0 0 0;
					text-align: center;
					width: 100%;
				}

					ul.actions li:first-child {
						padding-top: 0;
					}

					ul.actions li > * {
						margin: 0 !important;
						width: 100%;
					}

				ul.actions.small li {
					padding: 0.5em 0 0 0;
				}

					ul.actions.small li:first-child {
						padding-top: 0;
					}

			ul.icons-grid li {
				box-shadow: inset 0 1px 0 0 #dddddd !important;
				float: none;
				margin: 2em 0 0 0;
				padding: 2em 0 0 0;
				width: 100%;
			}

				ul.icons-grid li:first-child {
					box-shadow: none !important;
					margin-top: 0;
					padding: 1em 0 0 0;
				}

				ul.icons-grid li:nth-child(2n + 1) {
					box-shadow: none;
				}

				ul.icons-grid li:nth-child(2n + 3):before {
					display: none;
				}

		/* Button */

			input[type="submit"],
			input[type="reset"],
			input[type="button"],
			button,
			.button {
				padding: 0;
			}

				input[type="submit"].icon,
				input[type="reset"].icon,
				input[type="button"].icon,
				button.icon,
				.button.icon {
					padding-left: 0;
				}

		/* Main */

			.main .container {
				padding: 3em 1em 1em 1em ;
			}

				.main .container .image.primary:first-child {
					margin: -2em 0 2.5em 0;
				}

		/* Footer */

			#footer .container {
				padding: 3em 1em 1em 1em ;
			}

			#footer footer .copyright {
				line-height: inherit;
			}

				#footer footer .copyright li {
					border-left: 0;
					display: block;
					margin: 0;
					padding: 0;
				}

	}

